# Packt-StatisticsAndCalculusWithPython

./: README.md  pyproject.toml
01_statisticalToolbox/: categorical_data.py  dispersion.py  numerical_data.py
data/: data.csv
